Remove perm space for java 8